--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.database=mysql
-spring.data.jdbc.repositories.enabled=true
+spring.jpa.database=default
+#spring.data.jdbc.repositories.enabled=true
+users.datasource.url=jdbc:mysql://localhost:3306/adltest
+users.datasource.username=root
+users.datasource.password=adl123
+users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+users.jpa.database-platform=org.hibernate.dialect.MySQLDialect
