add simple authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=default
-#spring.data.jdbc.repositories.enabled=true
 users.datasource.url=jdbc:mysql://localhost:3306/adltest
 users.datasource.username=root
 users.datasource.password=adl123
 users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 users.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+users.jpa.show-sql=true
